error.txt
Executing script: /Users/study/Desktop/PROJECTS - ALEX/untitled/dictionaries.py
Script arguments: 
Output:
  File "/Users/study/Desktop/PROJECTS - ALEX/untitled/dictionaries.py", line 2
    print(f"My dog's name is {dog['name']}")'hero_name': 'Spider-Man',
                                            ^
SyntaxError: invalid syntax

